<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto">
  <data>
    <import type="android.view.View" />
    <variable name="viewModel" type="com.example.vivekbhalodiya.railticket.feature.userlogin.UserLoginViewModel"/>
  </data>

  <FrameLayout
      tools:context="com.example.vivekbhalodiya.railticket.feature.userlogin.UserLoginActivity"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/colorPrimary"
      android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        wheel:popupTheme="@style/AppTheme">

      <TextView
          android:text="Rail Ticket"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:fontFamily="sans-serif"
          android:textSize="20dp"
          android:gravity="start|fill_vertical"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="15dp"
        android:background="@color/lightPrimaryColor"
        android:layout_marginHorizontal="30dp">

      <TextView
          android:text="User Login"
          android:textStyle="bold"
          android:textSize="15sp"
          android:paddingStart="5dp"
          android:paddingTop="10dp"
          android:layout_marginBottom="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@color/white"/>


      <android.support.design.widget.TextInputLayout
          android:id="@+id/email_input_layout"
          android:layout_width="match_parent"
          android:textColorHint="@color/colorPrimary"
          android:layout_height="match_parent">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:hint="@string/email_address_hint"
            android:textColor="@color/white"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/lightPrimaryColorTransparent"
            android:singleLine="true"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/password_input_layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:textColorHint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewModel.password}"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:hint="@string/password_hint"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"/>
      </android.support.design.widget.TextInputLayout>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="@{viewModel::onClickLoginUser}"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:background="@color/colorAccent"
          android:text="@string/log_in_button"
          android:textColor="@color/white"
          android:layout_marginTop="20dp"
          android:layout_gravity="center"/>

      <TextView
          android:id="@+id/sign_up_textview"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="20sp"
          android:onClick="@{viewModel::onClickCreateAccount}"
          android:layout_gravity="center_horizontal"
          android:text="@string/create_an_account"
          android:textColor="@color/colorPrimary"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="20dp"
          android:singleLine="true"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/lightPrimaryColor"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal">
      <Button
          android:id="@+id/admin_login_textview"
          android:layout_width="140dp"
          android:layout_height="wrap_content"
          android:paddingHorizontal="5dp"
          android:onClick="@{viewModel::onClickTrainLiveStatus}"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:background="@color/colorPrimary"
          android:layout_marginEnd="2dp"
          android:textColor="@color/white"
          android:text="@string/train_live_status"
          android:layout_gravity="center_vertical|start"/>

      <Button
          android:id="@+id/ticket_checker_button"
          android:layout_width="140dp"
          android:layout_height="wrap_content"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:textColor="@color/white"
          android:background="@color/colorPrimary"
          android:paddingHorizontal="5dp"
          android:layout_marginStart="2dp"
          android:layout_gravity="center_vertical|end"
          android:text="@string/ticket_checker_text"/>
    </FrameLayout>

  </FrameLayout>
</layout>