<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wheel="http://schemas.android.com/apk/res-auto">
  <data>
    <import type="android.view.View" />
    <variable name="viewModel" type="com.example.vivekbhalodiya.railticket.feature.adminlogin.AdminViewModel"/>
  </data>
  <FrameLayout
      tools:context="com.example.vivekbhalodiya.railticket.feature.adminlogin.AdminLoginActivity"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        wheel:popupTheme="@style/AppTheme"/>
    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        wheel:matProg_barColor="#5588FF"
        wheel:matProg_progressIndeterminate="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">



      <android.support.design.widget.TextInputLayout
          android:id="@+id/email_input_layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:hint="@string/email_address_hint"
            android:textColor="@color/lightPrimaryColor"
            android:textColorHighlight="@color/lightPrimaryColor"
            android:textColorHint="@color/lightPrimaryColor"
            android:singleLine="true"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/password_input_layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:hint="@string/password_hint"
            android:textColor="@color/lightPrimaryColor"
            android:textColorHint="@color/lightPrimaryColor"
            android:singleLine="true"/>
      </android.support.design.widget.TextInputLayout>

      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/Widget.AppCompat.Button.Borderless"
          android:background="@color/colorAccent"
          android:text="@string/log_in_button"
          android:textColor="@color/white"
          android:layout_marginTop="20dp"
          android:layout_gravity="center"/>
    </LinearLayout>
  </FrameLayout>
</layout>